<resources>
    <string name="app_name">MovieApp</string>
    <string name="welcome">Welcome to the Home Page!</string>
    <string name="search_movies_tv_shows">Search Movies/TV Shows</string>
    <string name="search_hint">Search for movies or TV shows</string>
    <string name="show_movies">Show Movies</string>
    <string name="show_tv_shows">Show TV Shows</string>
    <string name="movie_subtitle">Movie - Released: %1$d</string>
    <string name="tv_show_subtitle">TV Show - Genre: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="show_my_reviews">My reviews</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="tv_show_poster">TV Show Poster</string>
    <string name="seasons">Seasons</string>

</resources>